--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ body::-webkit-scrollbar {
   bottom: 0;
   position: absolute;
   width: 100%;
-  height: 40rem;
+  height: 100%;
   flex-shrink: 0;
   background: rgba( 255, 255, 255, 0.1 );
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
