--- a/style.css
+++ b/style.css
@@ -150,9 +150,9 @@ body::-webkit-scrollbar {
 .hero-container {
   display: flex;
   justify-content: center;
-  margin: 15.12rem 0rem;
+  margin-top: 15.12rem;
   max-width: 80.0625rem;
-  width: auto;
+  width: calc(100%-32rem);
   flex-direction: column;
   align-items: flex-start;
   gap: 4.5rem;
@@ -345,7 +345,7 @@ body::-webkit-scrollbar {
 
 .background {
   margin-right: 6.5rem;
-  width: 71.3125rem;
+  width: calc(100%-6.5rem);
   height: 35rem;
   flex-shrink: 0;
   background-color: #292F3A;
@@ -357,7 +357,7 @@ body::-webkit-scrollbar {
   top: auto;
   bottom: 0;
   position: absolute;
-  width: 90%;
+  width: 100%;
   height: 35rem;
   flex-shrink: 0;
   background: url(image/project1.png) 50% 50% / cover no-repeat;
@@ -412,7 +412,7 @@ body::-webkit-scrollbar {
 
 .background-2 {
   margin-right: 6.5rem;
-  width: 71.3125rem;
+  width: calc(100%-6.5rem);
   height: 35rem;
   flex-shrink: 0;
   background-color: #3C8067;
@@ -424,7 +424,7 @@ body::-webkit-scrollbar {
   top: auto;
   bottom: 0;
   position: absolute;
-  width: 90%;
+  width: 100%;
   height: 35rem;
   flex-shrink: 0;
   background: url(image/project2.png) 50% 50% / cover no-repeat;
@@ -583,6 +583,7 @@ body::-webkit-scrollbar {
   .name,.skill-title {
     font-size: 2.6875rem;
   }
+  
 
   .h1-hero {
     font-size: 4.75rem;
@@ -637,12 +638,15 @@ body::-webkit-scrollbar {
     display: none;
   }
 
-  .skill-container{
-    display: grid;
-    text-align: center;
-    align-items: unset;
-    justify-content: center;
-    grid-template-rows: repeat(1, 1fr); 
+  .skill-container {
+    display: flex;
+    height: unset;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+    padding: 0 auto;
+    gap: 4rem;
   }
 
   .skill-contain {
@@ -651,7 +655,9 @@ body::-webkit-scrollbar {
     align-items: flex-start;
     gap: 3rem;
     justify-content: space-between;
+    height: 10.9rem;
   }
+
   /*skill*/
   /*creation*/
   .creation-paragraph {
@@ -663,6 +669,155 @@ body::-webkit-scrollbar {
     padding-right: 0;
     margin-right: auto;
     margin-left: 20%;
+  }
+  /*contact*/
+  /*footer*/
+  .footer {
+    flex-direction: column-reverse;
+    gap: 1rem;
+    padding: 1.5rem 0rem;
+  }
+  
+  .copyright-container {
+    width: 20.5625rem;
+  }
+
+  .c-logo {
+    fill: var(--Black-50, rgba(29, 30, 33, 0.50));
+  }
+  
+  .copyright {
+    color: var(--Black-50, rgba(29, 30, 33, 0.50));
+    font-size: 0.875rem;
+  }
+  
+  
+  .instagram-footer, .linked-in-footer, .github-footer {
+    font-size: 1.5rem;
+  }
+  /*footer*/
+}
+
+@media only screen and (max-width: 1130px) {
+  /*hero*/
+  .hero-container {
+    position: relative;
+    margin-left: 4rem;
+    margin-right: 4rem;
+    left: 0px;
+  }
+  /*hero*/
+}
+
+@media only screen and (max-width: 850px) {
+  /*Font*/
+    .name,.skill-title {
+      font-size: 1.75rem;
+    }
+    
+  
+    .h1-hero {
+      font-size: 2.5rem;
+    }
+  
+    .see-my-creations div,.paragraph,.contact-paragraph, .contact-detail, .creation-paragraph {
+      font-size: 1rem;
+    }
+  
+    .see-my-creations svg {
+      width: 1.5rem;
+      height: 1.5rem;
+    }
+  
+  /*Font*/
+  /*header*/
+  .socials {
+    display: none;
+  }
+  .vertical-line {
+    display: none;
+  }
+  /*header*/
+  /*hero*/
+  .hero-container {
+    max-width: 28.5rem;
+  }
+  
+  .h1-hero {
+    max-width: 28.5rem;
+    min-width: 20rem;
+    height: auto;
+  }
+  
+
+  
+  .see-my-creations {
+    padding: 1rem 0rem;
+    width: 100%;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+  }
+  
+
+  .see-my-creations div {
+    font-size: 1.125rem;
+  }
+  /*hero*/
+  /*skill*/
+  .skill-container {
+    height: auto;
+  }
+
+  .skill-contain {
+    display: grid;
+    width:auto;
+    height: 400px;
+    grid-template-columns: 200px 200px;
+    grid-row: auto auto;
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+  }
+  /*skill*/
+  /*creations*/
+  .creation-title-p-contain {
+    padding: unset;
+    width: auto;
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+
+  .creation-paragraph {
+    width: auto;
+  }
+  /*creations*/
+  /*contact*/
+  .contact-container {
+    display: flex;
+    max-width: 28.5rem;
+    width: auto;
+    height: auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5.5rem;
+    margin: unset;
+    margin-left: 4rem;
+    margin-right: 4rem;
+  }
+  .contact-detail-container {
+    display: flex;
+    height: 3.625rem;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+  }
+
+  .contact-paragraph {
+    align-self: stretch;
+    width: auto;
+    max-width: unset;
   }
   /*contact*/
 }
